fix collapsible content top and bottom spacing

--- a/JabbR/Content/themes/default/Chat.css
+++ b/JabbR/Content/themes/default/Chat.css
@@ -2486,7 +2486,6 @@ li.clearfix {
 
 h3.collapsible_title {
     line-height: normal;
-    margin-top: 16px;
     font-weight: 300;
 }
 
